--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
         <link rel="stylesheet" href="css/icons.css" media="screen" charset="utf-8">
     </head>
     <body>
-        <div class="header-container">
-            <div class="header-center">
-                <div class="header-title">xavier</div>
-                <div class="header-desc">Je fait des <br><span id="hero-desc" class="hero-cursor"></span></div>
+        <div class="hero-container">
+            <div class="hero-center">
+                <div class="hero-title">xavier</div>
+                <div class="hero-desc">Je fait des <br><span id="hero-desc" class="hero-cursor"></span></div>
+                <div class="hero-down-container">
+                    <div class="hero-down">
+                        <span class="ti-arrow-down"></span>
+                    </div>
+                </div>
             </div>
             <ul class="nav-container">
                 <li class="nav-button">Accueil</li>
@@ -18,38 +23,10 @@
                 <li class="nav-button">Mon Savoir</li>
                 <li class="nav-button">Contact</li>
             </ul>
+            <div class="hero-curve"></div>
         </div>
-
-        <div class="competence-container">
-            <div class="competence-title">Mes<br>Compétences</div>
-            <div class="competence-rows">
-                <div class="competence-item-container">
-                    <div class="competence-item">
-                        <span class="competence-item-text"><span class="ti-html5"></span></span>
-                    </div>
-                </div>
-                <div class="competence-item-container">
-                    <div class="competence-item">
-                        <span class="competence-item-text"><span class="ti-server"></span></span>
-                    </div>
-                </div>
-                <div class="competence-item-container">
-                    <div class="competence-item">
-                        <span class="competence-item-text"><span class="ti-image"></span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="competence-rows">
-                <div class="competence-item-container">
-                    <p class="competence-item-title">HTML & CSS</p>
-                </div>
-                <div class="competence-item-container">
-                    <p class="competence-item-title">JS & NODE.JS</p>
-                </div>
-                <div class="competence-item-container">
-                    <p class="competence-item-title">DESIGN</p>
-                </div>
-            </div>
+        <div class="projects-container">
+            Y'a rien pour le moment
         </div>
         <div class="footer-container">
             <p>Soigneusement réalisé par <span class="strong">Xavier</span> &copy; 2017</p>
