--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Xavier "Revax"</title>
+        <title>Xavier</title>
         <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="css/icons.css" media="screen" charset="utf-8">
     </head>
