Festival Du Film 2017 - Gab

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Xavier</title>
+        <title>Gab - Le Film</title>
         <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="css/icons.css" media="screen" charset="utf-8">
     </head>
     <body>
         <div class="hero-container">
             <div class="hero-center">
-                <div class="hero-title">xavier</div>
-                <div class="hero-desc">Je fait des <br><span id="hero-desc" class="hero-cursor"></span></div>
+                <div class="hero-title">GAB</div>
+                <div class="hero-desc">Un film qui va <br><span id="hero-desc" class="hero-cursor"></span></div>
                 <div class="hero-down-container">
                     <div class="hero-down">
                         <span class="ti-arrow-down"></span>
@@ -19,14 +19,39 @@
             </div>
             <ul class="nav-container">
                 <li class="nav-button">Accueil</li>
-                <li class="nav-button">Projets</li>
-                <li class="nav-button">Mon Savoir</li>
-                <li class="nav-button">Contact</li>
+                <li class="nav-button">Équipe</li>
+                <li class="nav-button">Bande-Annonce</li>
+                <li class="nav-button">En Savoir Plus</li>
             </ul>
             <div class="hero-curve"></div>
         </div>
         <div class="projects-container">
-            Y'a rien pour le moment
+            <div class="projects-title">Équipe</div>
+            <div class="projects-row">
+                <div class="project-thumb"></div>
+                <div class="project-title">Xavier Hamel</div>
+                <p class="project-desc">Rôle</p>
+            </div>
+            <div class="projects-row">
+                <div class="project-thumb"></div>
+                <div class="project-title">Camille Lacasse</div>
+                <p class="project-desc">Rôle</p>
+            </div>
+            <div class="projects-row">
+                <div class="project-thumb"></div>
+                <div class="project-title">Jeanne Dionne</div>
+                <p class="project-desc">Rôle</p>
+            </div>
+            <div class="projects-row">
+                <div class="project-thumb"></div>
+                <div class="project-title">Michelle Huot</div>
+                <p class="project-desc">Rôle</p>
+            </div>
+            <div class="projects-row">
+                <div class="project-thumb"></div>
+                <div class="project-title">Cédric Hébert</div>
+                <p class="project-desc">Rôle</p>
+            </div>
         </div>
         <div class="footer-container">
             <p>Soigneusement réalisé par <span class="strong">Xavier</span> &copy; 2017</p>
